<resources>
    <string name="app_name">StarWarsCVApp</string>
    <string name="splash_text">Hace muchos milisegundos en una provincia muy lejana...</string>
    <string name="character_item_films">Number of films: %s</string>
    <string name="name">Name:</string>
    <string name="height">Height</string>
    <string name="mass">Mass</string>
    <string name="hair">Hair</string>
    <string name="eyes">Eyes</string>
    <string name="gender">Gender</string>
    <string name="skin">Skin</string>
    <string name="homeworld">Homeworld</string>
    <string name="specie">species</string>
    <string name="vehicles">Vehicles</string>
    <string name="starships">Starships</string>
    <string name="character_name">Name: %s</string>
    <string name="n_a">N/A</string>
    <string name="skip">Skip</string>
    <string name="skip_alert_text">¿No more opening?</string>
    <string name="model">Model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="credits">credits</string>
    <string name="length">Length</string>
    <string name="max_speed">Max speed</string>
    <string name="crew">Crew</string>
    <string name="passengers">Passengers</string>
    <string name="cargo_capacity">Cargo capacity</string>
    <string name="consumables">Consumables</string>
    <string name="vehicle_class">Vehicle class</string>
    <string name="transport_class">Transport class</string>
    <string name="MGLT">MGLT</string>
    <string name="hyperdrive_rating">Hyperdrive rating</string>
    <string name="transport_name">Name: %s</string>
</resources>