<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="10dp"
    app:cardBackgroundColor="@color/cardview_shadow_start_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:theme="@style/Theme.AppCompat.Light"
                app:helperTextTextColor="@color/white"
                app:hintTextColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:theme="@style/Theme.AppCompat.Light"
                    app:helperTextTextColor="@color/white"
                    app:hintTextColor="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/edModel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/model"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textColorLink="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:theme="@style/Theme.AppCompat.Light"
                    app:helperTextTextColor="@color/white"
                    app:hintTextColor="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/edManufacturer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/manufacturer"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textColorLink="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:theme="@style/Theme.AppCompat.Light"
                    app:helperTextTextColor="@color/white"
                    app:hintTextColor="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/edCredits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/credits"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textColorLink="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:theme="@style/Theme.AppCompat.Light"
                    app:helperTextTextColor="@color/white"
                    app:hintTextColor="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/edLength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/length"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textColorLink="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:theme="@style/Theme.AppCompat.Light"
                    app:helperTextTextColor="@color/white"
                    app:hintTextColor="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/edMaxSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/max_speed"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textColorLink="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:theme="@style/Theme.AppCompat.Light"
                    app:helperTextTextColor="@color/white"
                    app:hintTextColor="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/edCrew"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/crew"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textColorLink="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"

                    android:theme="@style/Theme.AppCompat.Light"
                    app:helperTextTextColor="@color/white"
                    app:hintTextColor="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/edPassengers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/passengers"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textColorLink="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:theme="@style/Theme.AppCompat.Light"
                    app:helperTextTextColor="@color/white"
                    app:hintTextColor="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/edCargoCapacity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cargo_capacity"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textColorLink="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"

                    android:theme="@style/Theme.AppCompat.Light"
                    app:helperTextTextColor="@color/white"
                    app:hintTextColor="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/edConsumables"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/consumables"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textColorLink="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:theme="@style/Theme.AppCompat.Light"
                    app:helperTextTextColor="@color/white"
                    app:hintTextColor="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/edVehicleClass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vehicle_class"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textColorLink="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        <LinearLayout
            android:id="@+id/llStarship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"

                android:theme="@style/Theme.AppCompat.Light"
                app:helperTextTextColor="@color/white"
                app:hintTextColor="@color/white">

                <AutoCompleteTextView
                    android:id="@+id/edMGLT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/MGLT"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textColorLink="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:theme="@style/Theme.AppCompat.Light"
                app:helperTextTextColor="@color/white"
                app:hintTextColor="@color/white">

                <AutoCompleteTextView
                    android:id="@+id/edHyperdriveRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hyperdrive_rating"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textColorLink="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_dialog"
                    android:layout_centerHorizontal="false"

                    android:layout_gravity="end"
                    android:background="@color/white"
                    android:backgroundTint="@color/white"
                    android:gravity="center_horizontal"
                    android:text="OK"
                    android:textColor="#ffffffff" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>